# capybara-sampler

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  API_GUIDE.md  DOCKER.md  DOCUMENTATION.md  Dockerfile  EC2_DEPLOYMENT_GUIDE.md  HOSTINGER_VPS_GUIDE.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  ella_word_familiarity.py  main.py  package-lock.json  pyproject.toml  run.sh  run_serve.py  test_document_processing.py
cognates/: CogNet-top6.tsv
core/: __init__.py  cognate_lookup.py  constants.py  language_codes.py  openai_cognate_detector.py  score_model.py  tokenizer.py
data/: README.md
tests/: test_language_support.py
