[tool.poetry]
name = "ella-word-familiarity"
version = "0.1.0"
description = "FastAPI project for computing per-token familiarity scores with cognate boosting"
authors = ["Péricles Serotini <p.serotini@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
stanza = "^1.7.0"
wordfreq = "^3.0.3"
pydantic = "^2.5.0"
polars = "^0.20.0"
openai = "^1.0.0"
jellyfish = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"

[tool.poetry.scripts]
serve = "uvicorn main:app --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
